src/test/ui/pattern/for-loop-bad-item.stderr
error[E0308]: mismatched types
  --> $DIR/for-loop-bad-item.rs:7:19
   |
LL |     for ((_, _), (&mut c, _)) in &mut map {
   |                   ^^^^^^         -------- this is an iterator with items of type `(&(char, char), &mut (char, char))`
   |                   |
   |                   expected `char`, found `&mut _`
   |                   help: you can probably remove the explicit borrow: `c`
   |
   = note:           expected type `char`
           found mutable reference `&mut _`

error[E0308]: mismatched types
  --> $DIR/for-loop-bad-item.rs:14:14
   |
LL |     for Some(Qux(_)) | None in [Some(""), None] {
   |              ^^^^^^            ---------------- this is an iterator with items of type `Option<&str>`
   |              |
   |              expected `str`, found struct `Qux`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
